Further directory reorganisation

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -2,7 +2,9 @@ FROM jupyter/scipy-notebook:latest
 
 USER ${NB_USER}
 
-COPY --chown=${NB_UID}:${NB_GID} . ${HOME}
+WORKDIR ${HOME}/work
+
+COPY --chown=${NB_UID}:${NB_GID} demoroot .
 
 RUN pip install -U -r requirements.txt
 
