Use CMD instead of ENTRYPOINT

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -8,5 +8,4 @@ COPY --chown=${NB_UID}:${NB_GID} demoroot .
 
 RUN pip install -U -r requirements.txt
 
-# ENTRYPOINT [ "tini", "-g", "--" ]
-ENTRYPOINT [ "jupyter", "lab", "--NotebookApp.token=''" ]
+CMD [ "jupyter", "lab", "--NotebookApp.token=''" ]
