--- a/ipyauth/notebooks/ipyauth-eoepca-demo.env
+++ b/ipyauth/notebooks/ipyauth-eoepca-demo.env
@@ -1,5 +1,5 @@
 client_id=c00c65cd-18c5-4514-9c6c-aac49f217c4e
-redirect_uri=https://test.185.52.193.87.nip.io/callback.html
+redirect_uri=http://localhost:8888/lab/callback.html
 response_type=id_token token
 display=popup
 nonce=asohuasgasdgas79astgasgas
