--- a/demoroot/requirements.txt
+++ b/demoroot/requirements.txt
@@ -5,3 +5,8 @@ pycrypto==2.6.1
 pyjwkest==1.4.2
 robotframework==3.2.2
 WellKnownHandler==0.2.0
+OWSLib
+pyops
+git+git://github.com/edsu/opensearch@master#egg=opensearch
+folium
+geolinks
