--- a/demoroot/requirements.txt
+++ b/demoroot/requirements.txt
@@ -6,7 +6,7 @@ pyjwkest==1.4.2
 robotframework==3.2.2
 WellKnownHandler==0.2.0
 git+git://github.com/geopython/OWSLib@master#egg=OWSLib
-pyops
+git+git://github.com/EOFarm/pyops@master#egg=pyops
 git+git://github.com/edsu/opensearch@master#egg=opensearch
 folium
 geolinks
