--- a/demoroot/data/app-execute-body.json
+++ b/demoroot/data/app-execute-body.json
@@ -6,25 +6,16 @@
         "format": {
           "mimeType": "application/json"
         },
-        "href": "https://resource-catalogue.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&recordids=S2B_MSIL2A_20200902T090559_N0214_R050_T34SFH_20200902T113910.SAFE"
+        "href": "https://resource-catalogue.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&recordids=S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE"
       }
     },
     {
-      "id": "cbn",
+      "id": "threshold",
       "input": {
         "dataType": {
           "name": "string"
         },
-        "value": "ndvi"
-      }
-    },
-    {
-      "id": "s_expression",
-      "input": {
-        "dataType": {
-          "name": "string"
-        },
-        "value": "(/ (- nir red) (+ nir red))"
+        "value": "0.1"
       }
     }
   ],
