--- a/demoroot/requirements.txt
+++ b/demoroot/requirements.txt
@@ -5,9 +5,10 @@ pycrypto==2.6.1
 pyjwkest==1.4.2
 robotframework==3.2.2
 WellKnownHandler==0.2.0
-git+git://github.com/geopython/OWSLib@master#egg=OWSLib
-git+git://github.com/EOFarm/pyops@master#egg=pyops
-folium
-geolinks
-bs4
-tifffile
+OWSLib @ git+git://github.com/geopython/OWSLib@9a92b1c86c4ae551fdb015f647e6a34ce69cdf9e
+pyops @ git+git://github.com/EOFarm/pyops@4b53b097d098e880605056f0bcad8ca7993a2c62
+folium==0.12.1
+geolinks==0.2.0
+bs4==0.0.1
+tifffile==2021.4.8
+awscli==1.19.53
