--- a/demoroot/requirements.txt
+++ b/demoroot/requirements.txt
@@ -10,5 +10,6 @@ pyops @ git+git://github.com/EOFarm/pyops@4b53b097d098e880605056f0bcad8ca7993a2c
 folium==0.12.1
 geolinks==0.2.0
 bs4==0.0.1
+pystac-client==0.2.0b2
 tifffile==2021.4.8
 awscli==1.19.53
