--- a/demoroot/requirements.txt
+++ b/demoroot/requirements.txt
@@ -5,7 +5,7 @@ pycrypto==2.6.1
 pyjwkest==1.4.2
 robotframework==3.2.2
 WellKnownHandler==0.2.0
-OWSLib==0.24.1
+OWSLib @ git+git://github.com/geopython/OWSLib@4a73688c2073404a3e1c0ce6cc752865e111b65f
 pyops @ git+git://github.com/EOFarm/pyops@4b53b097d098e880605056f0bcad8ca7993a2c62
 folium==0.12.1
 geolinks==0.2.0
