Fix-up permission problems for local volume mount

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -11,5 +11,15 @@ services:
     ports:
     - "8888:8888"
     volumes:
-    - ${PWD}/demoroot:/home/jovyan/work
-    command: ["jupyter", "lab", "--NotebookApp.token=''" ]
+    - ${PWD}/demoroot:/home/${PUSER}/work
+    # START (make permissions work)
+    environment:
+      NB_USER: "${PUSER}"
+      NB_UID: "${PUID}"
+      NB_GID: "${PGID}"
+      CHOWN_HOME: "yes"
+      JUPYTER_ENABLE_LAB: "yes"
+    user: root  # needed to perform the user chown
+    working_dir: "/home/${PUSER}/work"
+    # END (make permissions work)
+    command: ["start-notebook.sh", "--NotebookApp.token=''" ]
