--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -23,3 +23,7 @@ services:
     working_dir: "/home/${PUSER}/work"
     # END (make permissions work)
     command: ["start-notebook.sh", "--NotebookApp.token=''" ]
+networks:
+  default:
+    external: true
+    name: eoepca-proc-ades-dev_default
