EOEPCA-657 #comment Demo notebook aligned to OGC-API Process Part 1

--- a/demoroot/data/app-deploy-body-cwl-template.json
+++ b/demoroot/data/app-deploy-body-cwl-template.json
@@ -1,28 +1,6 @@
 {
-  "inputs": [
-    {
-      "id": "applicationPackage",
-      "input": {
-        "format": {
-          "mimeType": "application/cwl"
-        },
-        "value": {
-          "href": "APPLICATION_PACKAGE_URL"
-        }
-      }
-    }
-  ],
-  "outputs": [
-    {
-      "format": {
-        "mimeType": "string",
-        "schema": "string",
-        "encoding": "string"
-      },
-      "id": "deployResult",
-      "transmissionMode": "value"
-    }
-  ],
-  "mode": "auto",
-  "response": "raw"
+  "executionUnit": {
+    "href": "APPLICATION_PACKAGE_URL",
+    "type": "application/cwl"
+  }
 }
