--- a/demoroot/requirements.txt
+++ b/demoroot/requirements.txt
@@ -1,16 +1,17 @@
 boto3==1.17.53
-eoepca-scim==2.7.4
+eoepca-scim==2.8.1
 lxml==4.6.3
 pycrypto==2.6.1
 pyjwkest==1.4.2
 robotframework==3.2.2
 WellKnownHandler==0.2.0
-OWSLib @ git+git://github.com/geopython/OWSLib@4a73688c2073404a3e1c0ce6cc752865e111b65f
-pyops @ git+git://github.com/EOFarm/pyops@4b53b097d098e880605056f0bcad8ca7993a2c62
+OWSLib==0.27.2
+pyops @ git+https://github.com/EOFarm/pyops@4b53b097d098e880605056f0bcad8ca7993a2c62
 folium==0.12.1
 geolinks==0.2.0
 bs4==0.0.1
-pystac-client==0.2.0
+pystac-client==0.3.2
 jsonschema==3.2.0
 tifffile==2021.4.8
 awscli==1.19.53
+rauth
