--- a/demoroot/requirements.txt
+++ b/demoroot/requirements.txt
@@ -5,7 +5,7 @@ pycrypto==2.6.1
 pyjwkest==1.4.2
 robotframework==3.2.2
 WellKnownHandler==0.2.0
-OWSLib==0.27.2
+OWSLib @ git+https://github.com/geopython/OWSLib@018c7f83fb042a6390d65aaa683110743609f3e3
 pyops @ git+https://github.com/EOFarm/pyops@4b53b097d098e880605056f0bcad8ca7993a2c62
 folium==0.12.1
 geolinks==0.2.0
