--- a/demoroot/requirements.txt
+++ b/demoroot/requirements.txt
@@ -1,17 +1,18 @@
+awscli==1.19.53
 boto3==1.17.53
+bs4==0.0.1
 eoepca-scim==2.8.1
-lxml==4.6.3
-pycrypto==2.6.1
-pyjwkest==1.4.2
-robotframework==3.2.2
-WellKnownHandler==0.2.0
-OWSLib==0.27.2
-pyops @ git+https://github.com/EOFarm/pyops@4b53b097d098e880605056f0bcad8ca7993a2c62
 folium==0.12.1
 geolinks==0.2.0
-bs4==0.0.1
-pystac-client==0.3.2
+ipyleaflet==0.17.1
 jsonschema==3.2.0
+lxml==4.6.3
+OWSLib==0.27.2
+pycrypto==2.6.1
+pyjwkest==1.4.2
+pyops @ git+https://github.com/EOFarm/pyops@4b53b097d098e880605056f0bcad8ca7993a2c62
+pystac-client==0.3.2
+rauth==0.7.3
+robotframework==3.2.2
 tifffile==2021.4.8
-awscli==1.19.53
-rauth
+WellKnownHandler==0.2.0
