--- a/demoroot/requirements.txt
+++ b/demoroot/requirements.txt
@@ -7,10 +7,9 @@ geolinks==0.2.0
 ipyleaflet==0.17.1
 jsonschema==3.2.0
 lxml==4.6.3
-OWSLib==0.28.1
+OWSLib @ git+https://github.com/geopython/OWSLib@f5e659c42e91c6301d82805e06e546803706e486
 pycrypto==2.6.1
 pyjwkest==1.4.2
-pyops @ git+https://github.com/EOFarm/pyops@4b53b097d098e880605056f0bcad8ca7993a2c62
 pystac-client==0.5.1
 rauth==0.7.3
 robotframework==3.2.2
