--- a/demoroot/requirements.txt
+++ b/demoroot/requirements.txt
@@ -6,13 +6,14 @@ folium==0.12.1
 geolinks==0.2.0
 ipyleaflet==0.17.1
 jsonschema==3.2.0
-lxml==4.6.3
+lxml==4.9.1
 OWSLib @ git+https://github.com/geopython/OWSLib@018c7f83fb042a6390d65aaa683110743609f3e3
-pycrypto==2.6.1
+pycryptodome==3.17
 pyjwkest==1.4.2
 pyops @ git+https://github.com/EOFarm/pyops@4b53b097d098e880605056f0bcad8ca7993a2c62
 pystac-client==0.5.1
 rauth==0.7.3
-robotframework==3.2.2
+robotframework==6.0.2
 tifffile==2021.4.8
 WellKnownHandler==0.2.0
+PyJWT==2.7.0
