--- a/demoroot/requirements.txt
+++ b/demoroot/requirements.txt
@@ -1,3 +1,4 @@
+identityutils @ git+https://github.com/eoepca/um-identity-service@v1.0.10
 awscli==1.19.53
 boto3==1.17.53
 bs4==0.0.1
@@ -7,13 +8,12 @@ geolinks==0.2.0
 ipyleaflet==0.17.1
 jsonschema==3.2.0
 lxml==4.6.3
-OWSLib @ git+https://github.com/geopython/OWSLib@018c7f83fb042a6390d65aaa683110743609f3e3
+matplotlib==3.7.1
+OWSLib==0.29.2
 pycrypto==2.6.1
 pyjwkest==1.4.2
-pyops @ git+https://github.com/EOFarm/pyops@4b53b097d098e880605056f0bcad8ca7993a2c62
-pystac-client==0.5.1
+pystac-client==0.6.1
 rauth==0.7.3
 robotframework==3.2.2
 tifffile==2021.4.8
 WellKnownHandler==0.2.0
-python-keycloak==3.2.0
