--- a/demoroot/requirements.txt
+++ b/demoroot/requirements.txt
@@ -1,4 +1,5 @@
 identityutils @ git+https://github.com/eoepca/um-identity-service@v1.0.10
+notebook
 awscli==1.29.68
 boto3==1.28.68
 bs4==0.0.1
@@ -11,7 +12,6 @@ lxml==5.2.2
 matplotlib==3.8.0
 OWSLib==0.29.2
 PyYAML==5.3.1
-pycrypto==2.6.1
 pyjwkest==1.4.2
 pystac-client==0.6.1
 rauth==0.7.3
