--- a/demoroot/requirements.txt
+++ b/demoroot/requirements.txt
@@ -22,3 +22,6 @@ python-keycloak==3.2.0
 rasterio==1.4.1
 PyJWT==2.10.1
 kubernetes==32.0.1
+pyarrow==20.0.0
+fastparquet==2024.11.0
+stac-geoparquet==0.7.0
