--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     image: eoepca/jupyterlab
     ports:
-    - "8888:8888"
+    - "${EXPOSE_PORT}:8888"
     volumes:
     - ${PWD}/demoroot:/home/${PUSER}/work
     # START (make permissions work)
